# drf-template

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
apps/app_1/: urls.py
apps/app_3/: apps.py
apps/authentication/: apps.py  urls.py
apps/authentication/auth/: expiring_token.py  secret_key.py
apps/authentication/backends/: email_password.py  secret_key.py
apps/authentication/managers/: otp.py  users.py
apps/authentication/middlewares/: disable_csrf.py
apps/authentication/migrations/: 0001_initial.py
apps/authentication/models/: __init__.py  user.py  user_otp.py
apps/authentication/permissions/: users.py
apps/authentication/serializers/: user.py  user_otp.py
apps/authentication/tasks/: __init__.py  demo.py  emails.py  ping.py
apps/authentication/views/: admin.py  auth.py  users.py
apps/core/audit/: audit_actions.py  audit_events.py  audit_manager.py
apps/core/classes/: default_router.py  redis_cache.py
apps/core/classes/cache/: __init__.py  cache_key_generator.py  cache_system.py  literal_key_generator.py
apps/core/classes/enums/: described_int.py
apps/core/classes/exceptions/: s3.py
apps/core/classes/fields/: jsonfields.py
apps/core/classes/filters/: number.py
apps/core/classes/serializers/: timestamp.py
apps/core/libs/ViewSetScenarios/: action_type.py  conditions.py  queryset.py  scenarios.py  viewset.py
apps/core/managers/: email.py  google_email.py  s3.py
apps/core/paginations/: large.py  small.py  tag.py
apps/core/services/: email.py
apps/core/utils/: codes.py  func.py
apps/core/validators/: characters.py  length.py  numerics.py
apps/task/management/commands/: cmd_test.py
config/: asgi.py  environment.py  urls.py  wsgi.py
config/environs/: base.py  dev.py  prod.py  test.py
config/loggers/: dev.py  pro.py
config/management/commands/: seeder.py  staff_maintenance.py  tests.py
config/management/commands/seeders/: base.py  seeder_static.py
config/management/commands/seeders/data/: scheduled_tasks.py
config/management/commands/staff/: base.py
config/settings/: base.py  dev.py  pro.py  test.py
config/swagger/: __init__.py  admin.py  auth.py  choices.py  users.py
